Prevent central score overlapping

--- a/src/app/ui-components/score-counter/components/score-counter/score-counter.component.scss
+++ b/src/app/ui-components/score-counter/components/score-counter/score-counter.component.scss
@@ -8,7 +8,7 @@
     border: 12vw groove gray;
     border-radius: 100%;
     margin: 0 auto;
-    //padding-top: 8vh;
+    padding-top: 6vh;
     display: flex;
     flex-direction: column;
     align-items: center;
